// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`doesn't fail for nodes without styles 1`] = `<div />`;

exports[`enzyme: enzyme.mount 1`] = `
.wrapper {
  background: papayawhip !important;
  padding: 4em !important;
}

.title {
  color: palevioletred !important;
  font-size: 1.5em !important;
  text-align: center !important;
}

<Wrapper>
  <section
    className="wrapper"
  >
    <Title>
      <h1
        className="title"
      >
        Hello World, this is my first component styled with aphrodite!
      </h1>
    </Title>
  </section>
</Wrapper>
`;

exports[`enzyme: enzyme.render 1`] = `
.wrapper {
  background: papayawhip !important;
  padding: 4em !important;
}

.title {
  color: palevioletred !important;
  font-size: 1.5em !important;
  text-align: center !important;
}

<section
  class="wrapper"
>
  <h1
    class="title"
  >
    Hello World, this is my first component styled with aphrodite!
  </h1>
</section>
`;

exports[`enzyme: enzyme.shallow 1`] = `
.wrapper {
  background: papayawhip !important;
  padding: 4em !important;
}

<section
  className="wrapper"
>
  <Title>
    Hello World, this is my first component styled with aphrodite!
  </Title>
</section>
`;

exports[`joins multiple classes 1`] = `
.first-second-third {
  background-color: black !important;
  color: blue !important;
}

<div
  className="first-second-third"
/>
`;

exports[`react-test-renderer 1`] = `
.wrapper {
  background: papayawhip !important;
  padding: 4em !important;
}

.title {
  color: palevioletred !important;
  font-size: 1.5em !important;
  text-align: center !important;
}

<section
  className="wrapper"
>
  <h1
    className="title"
  >
    Hello World, this is my first component styled with aphrodite!
  </h1>
</section>
`;

exports[`supports mediaQueries 1`] = `
.root {
  color: red !important;
}

@media (min-width: 200px) {
  .root {
    color: black !important;
  }
}

<div
  className="root"
/>
`;

exports[`supports pseudo selectors 1`] = `
.root {
  color: red !important;
}

.root:hover {
  color: green !important;
}

@media (min-width: 200px) {
  .root:hover {
    color: black !important;
  }
}

<div
  className="root"
/>
`;

exports[`works when the root element does not have styles 1`] = `
.wrapper {
  background: papayawhip !important;
  padding: 4em !important;
}

<div>
  <section
    className="wrapper"
  />
</div>
`;
